feature/ranking import 일부 수정하였습니다.